fixed double scroll bar bug

--- a/css/default.css
+++ b/css/default.css
@@ -454,7 +454,7 @@ div.container {
 }
 
 .accordion-toggle {
-	padding:6px 12px;
+	padding: 6px 12px;
 	border: 1px solid transparent;
   	border-radius: 4px;
   	cursor: pointer;
@@ -468,3 +468,7 @@ div.container {
   	background-color: #3071a9;
   	border-color: #285e8e;
 }
+
+.accordion-content.text {
+	padding: 9px 18px;
+};
